[CMS] - add section content in class component

--- a/cms/css/estilos.css
+++ b/cms/css/estilos.css
@@ -14,7 +14,7 @@
 	left:0;
 	margin-bottom:60px;
 	background-color:#000;
-	background-image:url('../iconos/andimier-cms.jpg');
+	background-image:url('../resources/header-logo.jpg');
 	background-repeat:no-repeat;
 	font-size:25px;
 	color:#fff;
