--- a/cms/scss/_variables.scss
+++ b/cms/scss/_variables.scss
@@ -1,5 +1,10 @@
+$blue: #0Cf;
 $buttons-green: #3cf971;
 $button-green-hover: #1cd651;
+$dark-grey: #999999;
+$darker-grey: #333333;
 $grey: #CCC;
 $red: red;
 $white: white;
+
+$main-font: "Courier New", "Courier", "monospace";
