--- a/cms/css/main.css
+++ b/cms/css/main.css
@@ -4,7 +4,8 @@
   margin: 0;
   padding: 0;
   font-family: "Courier New", 'Arial', 'sans-serif';
-  font-size: 14px; }
+  font-size: 14px;
+  font-weight: 100; }
 
 body {
   background-color: none;
@@ -22,6 +23,9 @@ header {
   background-repeat: no-repeat;
   height: 50px;
   width: 100%; }
+
+h2 {
+  font-size: 16px; }
 
 .button {
   background-color: #3cf971;
