--- a/cms/scss/_shared.scss
+++ b/cms/scss/_shared.scss
@@ -5,6 +5,7 @@
     padding: 0;
     font-family: "Courier New", 'Arial', 'sans-serif';
     font-size: 14px;
+    font-weight: 100;
 }
 
 body {
@@ -25,6 +26,10 @@ header {
     background-repeat:no-repeat;
     height:50px;
     width:100%;
+}
+
+h2 {
+    font-size: 16px;
 }
 
 .button {
