--- a/cms/css/main.css
+++ b/cms/css/main.css
@@ -104,6 +104,7 @@ h2 {
       padding: 5px 0; }
 
 .login-container {
+  grid-column: 2;
   padding-top: 100px; }
   .login-container .login {
     background-color: #CCC;
