--- a/cms/scss/_shared.scss
+++ b/cms/scss/_shared.scss
@@ -28,8 +28,16 @@ header {
     width:100%;
 }
 
+h1 {
+    font-size: 20px;
+}
+
 h2 {
     font-size: 16px;
+}
+
+section {
+    padding: 15px 0;
 }
 
 .button {
