--- a/cms/scss/_navigation.scss
+++ b/cms/scss/_navigation.scss
@@ -3,7 +3,7 @@
     color: $dark-grey;
     font-family: $main-font;
     grid-column: 1 / 2;
-    height: calc(100vh - 50px);
+    height: calc(100%);
     padding: 60px 25px 25px;
     top: 50px;
     width: auto;
