--- a/cms/scss/_shared.scss
+++ b/cms/scss/_shared.scss
@@ -40,6 +40,40 @@ section {
     padding: 15px 0;
 }
 
+label,
+input,
+select {
+    display: block;
+}
+
+label,
+select {
+    padding: 20px 0;
+}
+
+select {
+    height: 40px;
+}
+
+input[type=text],
+.text-input-box {
+    border: 1px solid black;
+    padding: 20px;
+}
+
+ul {
+    list-style: none;
+}
+
+li a {
+    text-decoration: none;
+    color: $white;
+}
+
+li a:hover {
+    color: $dark-grey;
+}
+
 .button {
     background-color: $buttons-green;
     color: white;
@@ -83,4 +117,11 @@ section {
             text-decoration:none;
         }
     }
+}
+
+.section-content-wrapper {
+    border: 2px dotted $grey;
+    margin: 30px 0;
+    padding: 15px;
+    width: 90%;
 }
