--- a/cms/css/main.css
+++ b/cms/css/main.css
@@ -102,6 +102,9 @@ li a:hover {
   padding: 15px;
   width: 90%; }
 
+.required-field {
+  border: 2px solid red; }
+
 .navigation-container {
   background-color: #333333;
   color: #999999;
