--- a/cms/scss/_variables.scss
+++ b/cms/scss/_variables.scss
@@ -6,5 +6,6 @@ $darker-grey: #333333;
 $grey: #CCC;
 $red: red;
 $white: white;
+$black: black;
 
 $main-font: "Courier New", "Courier", "monospace";
