--- a/cms/css/main.css
+++ b/cms/css/main.css
@@ -13,7 +13,6 @@ body {
   grid-template-columns: repeat(3, 1fr); }
 
 button,
-input[type=text],
 input[type=password] {
   padding: 15px 30px; }
 
@@ -45,7 +44,6 @@ select {
 select {
   height: 40px; }
 
-input[type=text],
 .text-input-box {
   border: 1px solid black;
   padding: 20px; }
@@ -101,6 +99,10 @@ li a:hover {
   margin: 30px 0;
   padding: 15px;
   width: 90%; }
+
+.input {
+  border: 1px solid black;
+  padding: 20px; }
 
 .required-field {
   border: 2px solid red; }
