--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,22 @@ a {
   color: black;
   text-decoration: none; }
 
-.paragraph h2 {
-  padding: 0 0 10px 0;
-  border-bottom: 1px solid #999966;
-  width: max-content; }
+.main-container {
+  padding-top: 50px; }
+  .main-container * {
+    font-family: "Times New Roman", "Arial"; }
+  .main-container .section-title {
+    border-bottom: 1px solid #999966;
+    font-size: 35px;
+    width: max-content; }
+  .main-container .content-title {
+    color: #999966;
+    font-size: 25px;
+    padding: 0 0 10px 0; }
+  .main-container .content-text {
+    color: #99cc66;
+    font-size: 16px; }
+
+.section .section-title {
+  color: #999966;
+  text-transform: capitalize; }
