--- a/scss/_shared.scss
+++ b/scss/_shared.scss
@@ -27,3 +27,33 @@ a {
     color: $black;
     text-decoration: none;
 }
+
+.main-container {
+	padding-top: 50px;
+
+	* {
+		font-family: "Times New Roman", "Arial";
+	}
+
+	.section-title {
+		border-bottom: 1px solid #999966;
+		font-size: 35px;
+		width: max-content;
+	}
+
+	.content-title {
+		color: $green-title;
+		font-size: 25px;
+		padding: 0 0 10px 0;
+	}
+
+	.sub-title {
+
+	}
+
+	.content-text {
+		color: $green-text;
+		font-size: 16px;
+	}
+}
+
