--- a/scss/_shared.scss
+++ b/scss/_shared.scss
@@ -18,8 +18,6 @@ p {
 	font-size: 14px;
 	font-style: italic;
 	font-weight: 300;
-	margin-top: 20px;
-	padding: 0 150px 0 0;
 	text-align: justify;
 }
 
@@ -29,7 +27,15 @@ a {
 }
 
 .main-container {
-	padding-top: 50px;
+	padding: 150px 50px 100px;
+
+	@include tablet {
+		padding-top: 100px;
+	}
+
+	@include desktop {
+		padding: 65px 200px 0 350px;
+	}
 
 	* {
 		font-family: "Times New Roman", "Arial";
