[CMS] - add edit sections link to main nav

--- a/cms/css/main.css
+++ b/cms/css/main.css
@@ -145,6 +145,13 @@ li a:hover {
     padding: 15px 30px; }
     .navigation-container .nav-items-container .nav-item {
       padding: 5px 0; }
+  .navigation-container .edit-sections-link-container {
+    padding: 0 0 25px 0; }
+  .navigation-container a.edit-sections-link {
+    border-bottom: 1px dotted;
+    color: white; }
+    .navigation-container a.edit-sections-link:hover {
+      color: #CCC; }
 
 .login-container {
   grid-column: 2;
