[CMS] - add edit sections section

--- a/cms/css/main.css
+++ b/cms/css/main.css
@@ -69,7 +69,8 @@ li a:hover {
 
 .main-container {
   grid-column: 2 / 4;
-  padding: 60px 20px; }
+  min-height: 100vh;
+  padding: 60px 60px; }
 
 .header {
   background-color: #000;
