--- a/cms/scss/_shared.scss
+++ b/cms/scss/_shared.scss
@@ -85,7 +85,8 @@ li a:hover {
 
 .main-container {
     grid-column: 2 / 4;
-    padding: 60px 20px;
+    min-height: 100vh;;
+    padding: 60px 60px;
 }
 
 .header {
