--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,10 @@
+// COLORS
 $black: black;
 $green-title: #999966;
 $green-text: #99cc66;
 $green-link: #999966;
+$grey-link: #BBBBBB;
 
+// BREACKPOINTS
 $desktop: 900px;
 $tablet: 651px;
