CMS - add functionality to for editing section titles and fix url parsing methods on section creation and update

--- a/cms/scss/main.scss
+++ b/cms/scss/main.scss
@@ -2,6 +2,7 @@
 @import "shared";
 @import "navigation";
 @import "login";
+@import "edit-sections";
 @import "section";
 @import "main-image";
 @import "text-edit-form";
