--- a/cms/css/main.css
+++ b/cms/css/main.css
@@ -27,7 +27,10 @@ h1 {
   font-size: 20px; }
 
 h2 {
-  font-size: 16px; }
+  font-size: 16px;
+  padding: 25px 0 15px;
+  text-decoration: underline;
+  text-underline-position: under; }
 
 section {
   padding: 15px 0; }
@@ -178,6 +181,17 @@ li a:hover {
       border: 1px solid white;
       margin-top: 40px;
       padding: 30px; }
+
+.edit-sections li {
+  background-color: #CCC;
+  color: white;
+  margin: 10px 0;
+  width: 100%; }
+
+.edit-sections input[type=text] {
+  background-color: #CCC;
+  padding: 20px;
+  width: 100%; }
 
 .section li {
   background-color: #CCC;
