--- a/cms/scss/_shared.scss
+++ b/cms/scss/_shared.scss
@@ -33,6 +33,9 @@ h1 {
 
 h2 {
     font-size: 16px;
+    padding: 25px 0 15px;
+    text-decoration: underline;
+    text-underline-position: under;
 }
 
 section {
