--- a/cms/css/main.css
+++ b/cms/css/main.css
@@ -32,6 +32,9 @@ h2 {
   text-decoration: underline;
   text-underline-position: under; }
 
+p {
+  text-transform: none; }
+
 section {
   padding: 15px 0; }
 
@@ -119,6 +122,9 @@ li a:hover {
   height: calc(100%);
   padding: 60px 25px 25px;
   width: auto; }
+  .navigation-container h2 {
+    color: white;
+    padding: 30px 0 10px; }
   .navigation-container .logout-btn {
     margin-bottom: 30px; }
     .navigation-container .logout-btn:hover {
@@ -150,7 +156,7 @@ li a:hover {
     .navigation-container .nav-items-container .nav-item {
       padding: 5px 0; }
   .navigation-container .edit-sections-link-container {
-    padding: 0 0 25px 0; }
+    padding: 0 0 10px 0; }
   .navigation-container a.edit-sections-link {
     border-bottom: 1px dotted;
     color: white; }
