--- a/cms/scss/_navigation.scss
+++ b/cms/scss/_navigation.scss
@@ -7,6 +7,11 @@
     padding: 60px 25px 25px;
     width: auto;
 
+    h2 {
+        color: $white;
+        padding: 30px 0 10px;
+    }
+
     .logout-btn {
         margin-bottom: 30px;
 
@@ -60,7 +65,7 @@
     }
 
     .edit-sections-link-container {
-        padding: 0 0 25px 0;
+        padding: 0 0 10px 0;
 
     }
 
