--- a/cms/scss/main.scss
+++ b/cms/scss/main.scss
@@ -3,6 +3,7 @@
 @import "navigation";
 @import "login";
 @import "edit-sections";
+@import "edit-content";
 @import "section";
 @import "main-image";
 @import "text-edit-form";
