--- a/cms/scss/_edit-sections.scss
+++ b/cms/scss/_edit-sections.scss
@@ -8,6 +8,7 @@
 
     input[type=text] {
         background-color: $grey;
+        border: none;
         padding: 20px;
         width: 100%;
     }
