--- a/cms/scss/_shared.scss
+++ b/cms/scss/_shared.scss
@@ -52,6 +52,16 @@ select {
     display: block;
 }
 
+input[type=text] {
+    border: 1px solid $black;
+    padding: 20px;
+    width: 100%;
+}
+
+textarea {
+    width: 100%;
+}
+
 label,
 select {
     padding: 20px 0;
