--- a/cms/scss/_text-edit-form.scss
+++ b/cms/scss/_text-edit-form.scss
@@ -3,10 +3,14 @@
         display: none;
     }
 
+    .text-area-wrapper {
+        padding-top: 20px;
+    }
+
     .text-input-box {
         display: inline-block;
         height: 300px;
         overflow: scroll;
-        width: 90%;
+        width: 100%;
     }
 }
