--- a/cms/scss/_edit-sections.scss
+++ b/cms/scss/_edit-sections.scss
@@ -1,9 +1,25 @@
 .edit-sections {
     li {
+        align-items: center;
         background-color: $grey;
         color: $white;
+        display: flex;
         margin: 10px 0;
         width: 100%;
+
+        .delete-section-wrapper {
+            background-color: $red;
+            align-items: center;
+            display: flex;
+            padding: 10px;
+            margin-right: 15px;;
+
+            p {
+                color: $darker-grey;
+                font-size: 11px;
+                padding: 0 5px 0;
+            }
+        }
     }
 
     input[type=text] {
