--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,6 +4,7 @@ $green-title: #999966;
 $green-text: #99cc66;
 $green-link: #999966;
 $grey-link: #BBBBBB;
+$red-link: red;
 
 // BREACKPOINTS
 $desktop: 900px;
